# Mimick

./: .gitignore  CMakeLists.txt  CMakePresets.json  test.ipynb
boffie/: Cargo.toml
boffie/src/: blobstore.cc  main.rs
sample/strdup/: CMakeLists.txt  random_minute_generator.c  random_minute_generator.h  test.c
src/: CMakeLists.txt  common.h  config.h  vitals.h
test/: CMakeLists.txt  CTestTestfile.cmake
